--- a/client-app/package.json
+++ b/client-app/package.json
@@ -10,13 +10,17 @@
     "@types/react-router-dom": "^4.3.5",
     "@types/uuid": "^3.4.5",
     "axios": "^0.19.0",
+    "final-form": "^4.18.6",
     "mobx": "^5.13.0",
     "mobx-react-lite": "^1.4.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-final-form": "^6.3.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "react-toastify": "^5.4.0",
+    "react-widget": "^2.6.4",
+    "react-widgets-date-fns": "^4.0.26",
     "semantic-ui-react": "^0.88.0",
     "typescript": "3.6.2",
     "uuid": "^3.3.3"
