--- a/client-app/package.json
+++ b/client-app/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "3.1.1",
     "react-toastify": "^5.4.0",
     "react-widget": "^2.6.4",
+    "react-widgets": "^4.4.11",
     "react-widgets-date-fns": "^4.0.26",
     "semantic-ui-react": "^0.88.0",
     "typescript": "3.6.2",
