--- a/client-app/package.json
+++ b/client-app/package.json
@@ -8,8 +8,10 @@
     "@types/react": "16.9.2",
     "@types/react-dom": "16.9.0",
     "@types/react-router-dom": "^4.3.5",
+    "@types/react-widgets": "^4.3.3",
     "@types/uuid": "^3.4.5",
     "axios": "^0.19.0",
+    "date-fns": "^2.0.0-alpha.13",
     "final-form": "^4.18.6",
     "mobx": "^5.13.0",
     "mobx-react-lite": "^1.4.1",
@@ -19,7 +21,6 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "react-toastify": "^5.4.0",
-    "react-widget": "^2.6.4",
     "react-widgets": "^4.4.11",
     "react-widgets-date-fns": "^4.0.26",
     "semantic-ui-react": "^0.88.0",
