--- a/client-app/package.json
+++ b/client-app/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/cropperjs": "^1.1.5",
     "@types/jest": "24.0.18",
     "@types/node": "12.7.4",
     "@types/react": "16.9.2",
@@ -17,6 +18,7 @@
     "mobx": "^5.13.0",
     "mobx-react-lite": "^1.4.1",
     "react": "^16.9.0",
+    "react-cropper": "^1.2.0",
     "react-dom": "^16.9.0",
     "react-dropzone": "^10.2.1",
     "react-final-form": "^6.3.0",
