--- a/client-app/package.json
+++ b/client-app/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@microsoft/signalr": "^3.1.2",
     "@types/cropperjs": "^1.1.5",
     "@types/jest": "24.0.18",
     "@types/node": "12.7.4",
